--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,13 @@
 # testing
 /coverage
 
-
-
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
